Improved tests for AuthService, JwtService and TicketService